docs: update path to image

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -3,7 +3,7 @@ import { Meta } from '@storybook/blocks';
 <Meta title="Introduction" />
 <div>
   <div class="logo-container">
-    <img src="./src/stories/assets/bordex-logo.png" height={60} />
+    <img src="https://i.imgur.com/MvyDiXu.png" height={60} />
     <h1 class="logo-container__title">bordex</h1>
   </div>
   A simple React component library for addding styled borders to your elements.
@@ -35,7 +35,7 @@ export default function App() {
 }
 ```
 
-![Gradient Border Example](./src/assets/example_border.jpg)
+![Gradient Border Example](https://i.imgur.com/ioaqDbB.jpeg)
 
 <style>
   {`
